# scanss-evasion

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
docs/: arquitetura.md  capitulo-01.md  lore.md
scanss/: __init__.py  app.py  help_catalog.py  story.py
scanss/core/: __init__.py  account.py  auth.py  catalog.py  config.py  context.py  engine.py  feature.py  manager.py  models.py  paths.py  registry.py  savegame.py  scanss.py  states.py  storage.py  targets.py  textfmt.py  time_system.py
scanss/data/: __init__.py  easter_eggs.py  market.json
scanss/features/: __init__.py
scanss/features/market/: __init__.py  feature.py  service.py  view.py
scanss/features/saves/: __init__.py  feature.py  view.py
scanss/features/status/: __init__.py  feature.py  view.py
scanss/features/terminal/: __init__.py  feature.py  view.py
scanss/ui/: __init__.py  main_window.py  theme.py
scanss/ui/components/: __init__.py  loading.py  login.py  narration.py  sidebar.py
tests/: test_scanss.py
